# asvgard

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/parser/: mod.rs  parse.rs  tags.rs
src/png/: chunks.rs  mod.rs  zlib.rs
src/png/filter/: mod.rs  simd.rs
src/rasterizer/: canva.rs  dda.rs  map.rs  mod.rs  raster.rs  stroke.rs  strokeraster.rs
src/rasterizer/tags/: circle.rs  clippath.rs  ellipse.rs  l_gradient.rs  lgradient.rs  lineargradient.rs  mod.rs  path.rs  polygon.rs  rect.rs
src/svg/: mod.rs
src/svg/parser/: mod.rs  parse.rs  tags.rs
src/svg/rasterizer/: canva.rs  dda.rs  mod.rs  raster.rs  simd.rs  stroke.rs
src/svg/rasterizer/filters/: gaussian.rs  merge.rs  mod.rs  offset.rs
src/svg/rasterizer/tags/: circle.rs  clippath.rs  ellipse.rs  line.rs  lineargradient.rs  mod.rs  path.rs  polygon.rs  polyline.rs  radialgradient.rs  rect.rs  text.rs  use.rs
src/svg/utils/: color.rs  coords.rs  effects.rs  mod.rs  transform.rs
src/tga/: header.rs  mod.rs
src/utils/: color.rs  compat.rs  coords.rs  effects.rs  image.rs  math.rs  mod.rs  transform.rs
