[package]
name = "asvgard"
version = "0.2.2"
edition = "2024"
authors = ["Hoteira <hoteira@proton.me>"]
license = "MIT"
description = "High-performance SVG, PNG, and TGA rasterizer written in Rust"
repository = "https://github.com/yourusername/asvgard"
homepage = "https://github.com/yourusername/asvgard"
documentation = "https://docs.rs/asvgard"
readme = "README.md"
keywords = ["svg", "png", "tga", "rasterizer", "graphics"]
categories = ["graphics", "multimedia::images", "no-std"]

[dependencies]
titanf = { version = "2.3.2", default-features = false }

[features]
default = ["std"]
std = ["titanf/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
